fix login buttons alignment

--- a/src/components/not-logged-in.css
+++ b/src/components/not-logged-in.css
@@ -1,6 +1,9 @@
-@import url('./root.css');
+@import url("./root.css");
 
 .nli__container {
+	position: absolute;
+	right: 0;
+	top: 30%;
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
